Fixed details tag on Webkit Fixed flickering on dark mode

--- a/assets/scss/base/_global.scss
+++ b/assets/scss/base/_global.scss
@@ -13,6 +13,10 @@
   display: flex;
 }
 
+.invisibility {
+  visibility: hidden;
+}
+
 .hide {
   display: none !important;
 }
